log

Thu 14 Mar 2024 08:23:05 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
419785b
Thu 14 Mar 2024 08:23:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a524ea8
Thu 14 Mar 2024 08:33:37 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |     for (int i = 1, i < size, i++)
      |                       ^
exercises.c:20:7: error: expected expression before ‘return’
   20 |       return max;
      |       ^~~~~~
exercises.c:21:1: error: expected expression before ‘}’ token
   21 | }
      | ^
exercises.c:21:1: error: expected expression before ‘}’ token
exercises.c:15:14: error: unused variable ‘i’ [-Werror=unused-variable]
   15 |     for (int i = 1, i < size, i++)
      |              ^
exercises.c:14:9: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |     int max = arr[0];
      |         ^~~
exercises.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dbf7911
Thu 14 Mar 2024 08:39:12 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |     for (int i = 0, i < talla, i++)
      |                       ^
exercises.c:29:1: error: expected expression before ‘void’
   29 | void reverseArray(int arr[], int size) {}
      | ^~~~
exercises.c:71:1: error: expected expression before ‘typedef’
   71 | typedef struct {
      | ^~~~~~~
exercises.c:15:14: error: unused variable ‘i’ [-Werror=unused-variable]
   15 |     for (int i = 0, i < talla, i++)
      |              ^
exercises.c:15:5: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
   15 |     for (int i = 0, i < talla, i++)
      |     ^~~
exercises.c:15:5: note: adding ‘-flarge-source-files’ will allow for more column-tracking support, at the expense of compilation time and memory
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
In file included from test.c:1:
exercises.c:14:9: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |     int max = arr[0];
      |         ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
4abd607
